# care2025_liver_biodreamer

./: .dockerignore  .gitignore  .mailmap  Dockerfile  Dockerfile.gpu  README.md  build_docker.sh  build_docker_gpu.sh  example_usage.md  inference.sh  main.py  nnunet_commands.md  pyproject.toml  setup_gdrive_manual.sh
nnUNet/: .gitignore  pyproject.toml  readme.md
nnUNet/nnunetv2/: paths.py
nnUNet/nnunetv2/inference/: data_iterators.py  predict_from_raw_data.py
nnUNet/nnunetv2/training/loss/: compound_losses.py  robust_ce_loss.py
nnUNet/nnunetv2/training/lr_scheduler/: explr.py  polylr.py
nnUNet_preprocessed/Dataset017_Care2025_benchmark5/: dataset_fingerprint.json
nnUNet_results/Dataset017_Care2025_benchmark5/nnUNetTrainer__nnUNetPlans__3d_fullres/: dataset.json
notebook/: LiFS_pred.csv  README.md  RF_0.5417.pkl  RF_0.5694_balanced_weight.pkl  RF_0.5833_overweight_cls14.pkl  RF_0.9722_bal_T1.pkl  RF_1.0000_bal_GED4.pkl  RF_1.0000_no_val.pkl  augmentation.ipynb  classification.ipynb  dataset_analysis.ipynb  inference.ipynb  normalisation_test.ipynb  post_processing_test.ipynb  train_all_data.csv  train_all_data_T1.csv
output/inference/: plans.json  predict_from_raw_data_args.json
scripts/: augmentation.py  inference_data_preparation.py  multi_modal_training_splits.py  normalisation.py  post_processing.py  prepare_nnunet.py  prepare_nnunet_multi_modal.py  prepare_nnunet_val.py  prepare_submission_folder.py  registration_GED4_to_other.py  stage_prediction.py  submission_preparation.py  test.py  update_voxel_size_for_aug.py
(+6 files in other folders)
