[project]
name = "care2025-liver-biouvdreamer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.3",
    "natsort>=8.4.0",
    "nibabel>=5.3.2",
    "simpleitk>=2.5.2",
    "numpy==1.26.0",
]
